2012-06-08  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_removed_idle_cb),
	(libbalsa_mailbox_msgno_removed): use GSlice instead of g_new();
	use g_idle_add instead of gdk_threads_add_idle.

2012-06-08  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_check_and_sort),
	(lbm_set_threading_idle_cb), (lbm_set_threading): sort in an
	idle callback instead of subthread.
	* libbalsa/mailbox_local.c (lbml_set_threading),
	(lbml_set_threading_idle_cb),
	(libbalsa_mailbox_local_set_threading): set threading type in an
	idle callback instead of subthread.

2012-06-07  Peter Bloomfield

	* src/main.c (progress_set_text), (progress_set_text_idle_cb),
	(balsa_progress_set_text), (progress_set_fraction),
	(progress_set_fraction_idle_cb), (balsa_progress_set_fraction):
	call Gtk in idle callbacks instead of subthreads.

2012-06-07  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_inserted),
	(lbm_msgno_inserted_idle_cb), (libbalsa_mailbox_msgno_inserted):
	block subthread and use an idle callback to insert message in
	main thread.
	* libbalsa/mailbox_local.c
	(libbalsa_mailbox_local_load_messages): do not grab GDK lock.

2012-06-07  Peter Bloomfield

	* libbalsa/libbalsa.c (libbalsa_threads_enter): warn when
	locking a subthread, to help find bad code paths.

2012-06-07  Peter Bloomfield

	* src/main-window.c: check for NULL index.

2012-06-07  Peter Bloomfield

	* src/balsa-index.c (bndx_find_root): check for NULL tree model.

2012-06-07  Peter Bloomfield

	* src/main-window.c: check for NULL focus widget.

2012-06-06  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_close), (lbm_msgno_removed),
	(lbm_msgno_removed_idle_cb), (libbalsa_mailbox_msgno_removed):
	use an idle callback to remove the message from the tree-model.

2012-06-06  Peter Bloomfield

	* src/balsa-app.c (find_url_func), (find_url), (find_url_idle_cb),
	(balsa_find_url): block the subthread and use an idle callback
	to find the BalsaMailboxNode for the URL.

2012-06-06  Peter Bloomfield
