@@ -1,3 +1,11 @@
+2012-06-09  Peter Bloomfield
+
+	* libbalsa/mailbox.c (lbm_msgno_filt_check),
+	(lbm_msgno_filt_check_idle_cb),
+	(libbalsa_mailbox_msgno_filt_check): check whether message
+	matches current view filter in an idle callback instead of in
+	subthread.
+
 2012-06-08  Peter Bloomfield
 
 	* libbalsa/mailbox.c (lbm_msgno_removed_idle_cb),
